Notes halfway through p8

--- a/Notes20230823/notes20230823.tex
+++ b/Notes20230823/notes20230823.tex
@@ -114,4 +114,23 @@ This volume includes:
 
 \subsection{Introduction}
 
+Mathematics, since the ancient Greeks, has had a standard of precise and rigorous explanation, known as ${proof}$.
+
+Bourbaki is intending to discern the structure underlying both vocabulary and syntax. That is, they are concerned with precise definition of the words used in mathematical language, and clear description of the form of mathematical statements. Their goal is "formalized" mathematics.
+
+When they were working on this project, in 1930s France, it was a novel and needed project. Now, in 2023, with the advances in mathematical theory, and computer science, the idea of formalizing knowledge precisely is still rare in the sense of popularity, but not rare in the sense of daily importance. Our entire technology stack is founded on devices with precise, constructed formal definitions, and entire tool chains based on translation between languages of higher and lesser levels of abstraction. From loose product goals such as "Given a login screen, when a new user is signing up, then create an entry in the user database for them" to computer programs assembled out of library components to intermediate representations, to machine language, down to bits flowing through silicon, each step uses the idea of formalization to create actions in the world.
+
+That doesn't mean that our technology is without error, for we do not yet have fully proof-checked programs at every layer. Nor are tools for proof repair, such as described in Ringer 2021 (https://dependenttyp.es/pdf/thesis.pdf) yet in common use.
+
+Since Bourbaki, and especially since Voevodsky's work on Dependent Types, mathematics has become more formalized. There are projects such as MetaMath, and Lean, to express theorems in languages such as Coq, Isabelle/HOT and Lean, which allow for computers to assist in checking proofs.
+
+\begin{quote}
+	The formulae of ordinary algebraic calculation would be another example, if the rules governing the use of brackets were to be completely codified and strictly adhered to; in practice, some of these rules are never made explicit, and certain derogations of them are allowed. p7 English edition 2004
+\end{quote}
+
+Formalizing helps us protect against lapses of reasoning.
+
+---
+Up to paragraph starting "The $axiomatic method$" on page 8.
+
 \end{document}
