--- a/Notes20230823/notes20230823.tex
+++ b/Notes20230823/notes20230823.tex
@@ -131,6 +131,6 @@ Since Bourbaki, and especially since Voevodsky's work on Dependent Types, mathem
 Formalizing helps us protect against lapses of reasoning.
 
 ---
-Up to paragraph starting "The $axiomatic method$" on page 8.
+Up to paragraph starting "The $axiomatic\ method$" on page 8.
 
 \end{document}
